--- a/InKeyKeyboardCreator.vbproj
+++ b/InKeyKeyboardCreator.vbproj
@@ -92,6 +92,12 @@
     <Compile Include="Dialog3.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Dialog4.Designer.vb">
+      <DependentUpon>Dialog4.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Dialog4.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -162,6 +168,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="inkey.ico" />
+    <None Include="Resources\warning1.png" />
     <EmbeddedResource Include="AboutBox1.resx">
       <SubType>Designer</SubType>
       <DependentUpon>AboutBox1.vb</DependentUpon>
